# SlidingPuzzle

./: CMakeLists.txt  CMakeSettings.json  CSC 480 Assignment 1 presentation.docx  CSC480Assignment1_WriteUp.docx  README.md
SlidingPuzzle/: CMakeLists.txt  main.cpp
SlidingPuzzle/Controller/: puzzle_controller.cpp  puzzle_controller.h
SlidingPuzzle/Model/: bfs.h  board.cpp  board.h  cell.h  isearch.h  move.h  move.hpp  point.hpp  search_a_star.h  search_breadth_first.h  search_depth_first.h  search_greedy_best_first.h  search_informed.h  search_iterative_deepening.h  search_uniform_cost.h  state.cpp  state.h  utils.cpp  utils.h  utils.hpp
SlidingPuzzle/Tests/: board_tests.hpp  eight_puzzle_tests.hpp  puzzle_tests.hpp
SlidingPuzzle/Views/: iview.h  sdl_view.cpp  sdl_view.h  sfml_view.cpp  sfml_view.h  text_view.cpp  text_view.h
